<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brand_orange">

    <ImageView
        android:id="@+id/logo_didik"
        android:layout_marginTop="120dp"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo_didik_white"
        android:contentDescription="App Logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/bg_white_rounded"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_didik">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/tvTitle"
            android:textColor="@color/brand_orange"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:fontFamily="@font/poppins"
            android:text="@string/tvDesc"
            android:textColor="@color/hint_grey"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="80dp"
            app:backgroundTint="@color/brand_orange"
            android:text="@string/btnStart"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            android:textAllCaps="false"
            app:cornerRadius="12dp"
            android:textColor="@color/pure_white"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>